fixing broken link and delay

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="count-box">
               <i class="bi bi-headset"></i>
               <span data-purecounter-start="0" data-purecounter-end="1453" data-purecounter-duration="1" class="purecounter"></span>
@@ -175,32 +175,32 @@
         </div>
 
         <div class="row">
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
             <div class="icon"><i class="bi bi-windows"></i></div>
             <h4 class="title">.NET</h4>
             <p class="description">5+ years of .NET experience, building APIs that are easy to understand and use, creating maintainable code that is unit testable, and documenting process while following best practices.</p>
           </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
             <div class="icon"><i class="bx bxs-data"></i></div>
             <h4 class="title">Databases</h4>
             <p class="description">Elegant yet performant relational databases, heavy integration with Entity Framework, code first migrations using PostgreSQL, MSSQL. Experience with NoSQL using Redis and MongoDB.</p>
           </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
             <div class="icon"><i class="bx bxl-javascript"></i></div>
             <h4 class="title">JavaScript</h4>
             <p class="description">Functional applications with many variations of JS Frameworks implemented (including React), also event loop go brrr.</p>
           </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
             <div class="icon"><i class="bx bxl-docker"></i></div>
             <h4 class="title">Docker</h4>
             <p class="description">Containerization of apps and services, docker-compose, docker repositories and k8s implementations.</p>
           </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
             <div class="icon"><i class="bx bx-cloud"></i></div>
             <h4 class="title">Cloud Services</h4>
             <p class="description">Developed apps using AWS, Azure, GCP using Compute, Storage, Network services, and many more. Lots of integrations with Azure Active Directory.</p>
           </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
             <div class="icon"><i class="bx bx-network-chart"></i></div>
             <h4 class="title">GraphQL</h4>
             <p class="description">Scalable, dynamic data queries, both from a client side and server side. Large implementations across multiple data sources using Hasura.</p>
@@ -220,32 +220,32 @@
           <p>Technical expertise without soft skills, is much like a pizza without sauce.</p>
         </div>
         <div class="row">
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
             <div class="icon"><i class="bx bxs-user"></i></div>
             <h4 class="title">Empathy</h4>
             <p class="description">People need solutions created by people, it's always about understanding others deeply, allowing the ability to deliver <u><i>the</i></u> solution not <u><i>a</i></u> solution.</p>
           </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
             <div class="icon"><i class="bx bxs-group"></i></div>
             <h4 class="title">Collaboration</h4>
             <p class="description">Cross-functional teams provide an extremely high collaborative environment while providing unique perspectives.</p>
           </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
             <div class="icon"><i class="bx bx-question-mark"></i></div>
             <h4 class="title">Fearless Problem Solving</h4>
             <p class="description">Willing to accept challenges with confidence, that others may turn away.</p>
           </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
             <div class="icon"><i class="bx bx-chat"></i></div>
             <h4 class="title">Approachability</h4>
             <p class="description">Understanding that people have different levels of knowledge and may need topics discussed at different levels.</p>
           </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
             <div class="icon"><i class="bx bx-timer"></i></div>
             <h4 class="title">Time Management</h4>
             <p class="description">You cannot bake a 30 minute cake in 5 minutes, but first you need to know that cake takes 30 minutes.</p>
           </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
             <div class="icon"><i class="bx bx-brain"></i></div>
             <h4 class="title">Open Minded</h4>
             <p class="description">If I was always right, then I likely wouldn't have this site, as I would be retired already. Always willing to accept new ideas and concepts.</p>
@@ -265,7 +265,7 @@
         </div>
 
         <div class="row">
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
               <h4>Austin Coffman</h4>
@@ -299,7 +299,7 @@
             </div>
             
           </div>
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
               <h4>Senior Software Engineer</h4>
@@ -368,15 +368,16 @@
           </div>
         </div>
 
-        <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
+        <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
 
+        
           <div class="col-lg-4 col-md-6 portfolio-item filter-professional">
             <div class="card">
               <img src="assets/images/gps/gps-0.jpg" class="card-img-top" alt="">
               <div class="card-body d-flex flex-column">
                 <h5 class="card-title">Graduates Prepared to Succeed</h5>
                 <p class="card-text text-muted">Built for the Indiana Department of Education, serving as a state wide metric for student and school performance.</p>
-                <a class="card-button align-self-end" href="pages/gps-details.html" title="More Details">More Details</i></a>
+                <a class="card-button align-self-end" href="pages/gps-details.html">More Details</i></a>
               </div>
             </div>
           </div>
@@ -387,7 +388,7 @@
               <div class="card-body d-flex flex-column">
                 <h5 class="card-title">AMARO</h5>
                 <p class="card-text text-muted">A part-centric supply chain solution providing microelectronics procurement assurance to the U.S. Department of Defense.</p>
-                <a class="card-button align-self-end" href="pages/amaro-details.html" title="More Details">More Details</i></a>
+                <a class="card-button align-self-end" href="pages/amaro-details.html">More Details</i></a>
               </div>
             </div>
           </div>
@@ -398,7 +399,7 @@
               <div class="card-body d-flex flex-column">
                 <h5 class="card-title">ESEAT</h5>
                 <p class="card-text text-muted">Military curated budgetary document reference system, providing digestible data for at the sub-project and up level.</p>
-                <a class="card-button align-self-end" href="pages/eseat-details.html" title="More Details">More Details</i></a>
+                <a class="card-button align-self-end" href="pages/eseat-details.html">More Details</i></a>
               </div>
             </div>
           </div>
@@ -409,7 +410,7 @@
               <div class="card-body d-flex flex-column">
                 <h5 class="card-title">Terminal in CSS</h5>
                 <p class="card-text text-muted">Small personal project to become more comfortable with working on CSS animations and JS.</p>
-                <a class="card-button align-self-end" href="pages/terminal-details.html" title="More Details">More Details</i></a>
+                <a class="card-button align-self-end" href="pages/terminal-details.html">More Details</i></a>
               </div>
             </div>
           </div>
@@ -420,11 +421,10 @@
               <div class="card-body d-flex flex-column">
                 <h5 class="card-title">Pi Race Strategy</h5>
                 <p class="card-text text-muted">Ingests Real-Time data logger streams for use by IndyCar teams to aid in possible pit strategies and fuel consumption.</p>
-                <a class="card-button align-self-end" href="pages/pi-race-strategy-details.html" title="More Details">More Details</i></a>
+                <a class="card-button align-self-end" href="pages/pi-race-strategy-details.html">More Details</i></a>
               </div>
             </div>
           </div>
-
         </div>
 
       </div>
@@ -470,7 +470,7 @@
             </div>
 
             <div class="swiper-slide">
-              <div class="testimonial-item" data-aos="fade-up" data-aos-delay="200">
+              <div class="testimonial-item" data-aos="fade-up" data-aos-delay="100">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
                   Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
