--- a/pages/terminal-details.html
+++ b/pages/terminal-details.html
@@ -90,7 +90,7 @@
               <ul>
                 <li><strong>Name</strong>: Terminal in CSS</li>
                 <li><strong>Project Date</strong>: November 2021</li>
-                <li><strong>Project Site</strong>: <a href="https://austin-coffman.github.io/projects/terminal.html" target="_blank">https://austin-coffman.github.io/projects/terminal</a></li>
+                <li><strong>Project Site</strong>: <a href="https://austin-coffman.github.io/projects/terminal" target="_blank">https://austin-coffman.github.io/projects/terminal</a></li>
                 <li><strong>Tech Stack</strong>: HTML, CSS, JS</li>
                 <li><strong>Additional Information</strong>: This was a quick side project to work on some CSS animation and JS logic, while I'm not considering a <i>Front End</i> developer, I do like to stay as fresh as possible.
               </ul>
