--- a/index.html
+++ b/index.html
@@ -283,6 +283,14 @@
 
             <h3 class="resume-title">Awards</h3>
             <div class="resume-item">
+              <h4>Ed-Fi Innovator of the Year</h4>
+              <h5>Resultant | 2023</h5>
+              <p><em>Lead developer for the Indiana Graduates Prepared to Succeed (GPS) Application. This comprehensive application
+                helps Indiana educators, learners, and parents better interact with and understand education data. As a result, 
+                Resultant was awarded the <a href="https://resultant.com/blog/company-news/idoe-dashboard-work-garners-ed-fi-award-for-resultant/" target="_blank">Ed-Fi Innovator of the Year</a> award.
+              </em></p>
+            </div>
+            <div class="resume-item">
               <h4>2020 Industry Innovator Award</h4>
               <h5>Resultant | 2020</h5>
               <p><em>Lead backend developer for the AMARO solution. This solution was a cutting edge Microelectronics Supply Chain Risk tool for the US Navy.
@@ -306,7 +314,7 @@
               <h5>Feb 2022 - Present</h5>
               <p><em>Resultant | Technology Consulting | Indianapolis, IN </em></p>
               <ul>
-                <li>Lead developer for several projects, many of them are for state (Indiana) and federal (Department of Defense) government.</li>
+                <li>TSO for several private and public sector development projects - ranging from the state of Indiana to the Department of Defense.</li>
                 <li>Deploy cloud-based solutions in Azure, AWS and GCP.</li>
                 <li>Create CI/CD pipelines for a variety of deployment constraints.</li>
                 <li>Implemented a custom GraphQL based Query Builder tool that allows users to query any parameter in a relational way to generate results, reports, comparisons, and exports. All custom and in-house, while being scalable.</li>
