Updating Resume Section

--- a/index.html
+++ b/index.html
@@ -9,22 +9,15 @@
   <meta content="" name="description">
   <meta content="" name="keywords">
 
-  <!-- Favicons -->
   <link href="assets/images/favicon.ico" rel="icon">
   <link href="assets/images/apple-touch-icon.png" rel="apple-touch-icon">
-
-  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-
-  <!-- Vendor CSS Files -->
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-
-  <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
@@ -32,11 +25,8 @@
 </head>
 
 <body>
-
-  <!-- ======= Mobile nav toggle button ======= -->
   <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
 
-  <!-- ======= Header ======= -->
   <header id="header">
     <div class="d-flex flex-column">
 
@@ -60,21 +50,18 @@
           <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
         </ul>
-      </nav><!-- .nav-menu -->
+      </nav>
     </div>
-  </header><!-- End Header -->
+  </header>
 
-  <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Austin Coffman</h1>
       <p>I'm a <span class="typed" data-typed-items="Developer, Car Enthusiast, Pizza Enjoyer, Human Being"></span></p>
     </div>
-  </section><!-- End Hero -->
+  </section>
 
   <main id="main">
-
-    <!-- ======= About Section ======= -->
     <section id="about" class="about section-bg-light">
       <div class="container">
 
@@ -178,7 +165,7 @@
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
             <div class="icon"><i class="bi bi-windows"></i></div>
             <h4 class="title">.NET</h4>
-            <p class="description">5+ years of .NET experience, building APIs that are easy to understand and use, creating maintainable code that is unit testable, and documenting process while following best practices.</p>
+            <p class="description">7+ years of .NET experience, building APIs that are easy to understand and use, creating maintainable code that is unit testable, and documenting process while following best practices.</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
             <div class="icon"><i class="bx bxs-data"></i></div>
@@ -187,8 +174,8 @@
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
             <div class="icon"><i class="bx bxl-javascript"></i></div>
-            <h4 class="title">JavaScript</h4>
-            <p class="description">Functional applications with many variations of JS Frameworks implemented (including React), also event loop go brrr.</p>
+            <h4 class="title">TypeScript</h4>
+            <p class="description">Functional applications with many variations of JS Frameworks implemented (including React, Next.JS), also event loop go brrr.</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
             <div class="icon"><i class="bx bxl-docker"></i></div>
@@ -269,7 +256,7 @@
             <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
               <h4>Austin Coffman</h4>
-              <p><em>Results-driven human with 5+ years in Software Engineering, ready to fearlessly solve problems. 
+              <p><em>Results-driven human with 7+ years in Software Engineering, ready to fearlessly solve problems. 
                 Proven ability to multi-task in a dynamic fast-paced environment while delivering outcomes.
                 Lastly, a firm believer that <u>people are key</u>, all things software start and end with people.</em></p>
             </div>
@@ -310,8 +297,19 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
+              <h4>Software Engineering Manager</h4>
+              <h5>Feb 2024 - Present</h5>
+              <p><em>Resultant | Technology Consulting | Indianapolis, IN </em></p>
+              <ul>
+                <li>Leading a team of 5 software engineers with a variety of backgrounds and skill levels, ranging from junior to staff.</li>
+                <li>Pushing the direction of our 30+ person engineering department on topics such as tooling, process, values, mentoring - this includes a revamp of our entire CI/CD process.</li>
+                <li>Directing our hiring vision, focused on early career development and career pathways. In 2024, we hired 6 engineers and 2 interns.</li>
+                <li>Continuing to perform at a TSO level and leading project, while supporting others doing the same.</li>
+              </ul>
+            </div>
+            <div class="resume-item">
               <h4>Senior Software Engineer</h4>
-              <h5>Feb 2022 - Present</h5>
+              <h5>Feb 2022 - Feb 2024</h5>
               <p><em>Resultant | Technology Consulting | Indianapolis, IN </em></p>
               <ul>
                 <li>TSO for several private and public sector development projects - ranging from the state of Indiana to the Department of Defense.</li>
@@ -436,7 +434,8 @@
         </div>
 
       </div>
-    </section><!-- End Portfolio Section -->
+    </section>
+    <!-- End Portfolio Section -->
 
 
     <!-- ======= Testimonials Section ======= -->
